JSAI/error/src/test/resources/base/methods_a019.js
function foo() {
  return arguments.toString();
}

var res = foo();
print(res);

